# stasis

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: FUNDING.yml
browser/: README.md  stasis-browser-activity.sh
browser/extension/: README.md
browser/extension/.build-tmp/firefox/: manifest.json
browser/extension/.build-tmp/firefox/src/: content.js
browser/extension/manifests/: manifest.chromium.json  manifest.firefox.json
browser/extension/scripts/: build.sh
browser/extension/src/: background.js
browser/native-host/: README.md  stasis_native_host.py
browser/native-host/manifests/: io.github.saltnpepper97.stasis.chromium.json.template  io.github.saltnpepper97.stasis.firefox.json.template
browser/native-host/scripts/: install.sh
docs/man/: stasis.1  stasis.5
examples/: stasis.rune
nix/: default.nix  hm-module.nix  module.nix
packaging/systemd/user/: stasis.service
src/: cli.rs  main.rs
src/app/: command.rs  daemon_mode.rs  mod.rs  platform.rs
src/config/: bootstrap.rs  migrate.rs  mod.rs
src/core/: action.rs  config.rs  error.rs  events.rs  info.rs  manager_msg.rs  manager_tests.rs  mod.rs  state.rs  utils.rs
src/core/manager/: engine.rs  info.rs  list.rs  mod.rs  snapshot.rs
src/daemon/: actions.rs  mod.rs  run.rs
src/ipc/: client.rs  mod.rs  router.rs  server.rs
src/ipc/handlers/: browser_activity.rs  browser_inactive.rs  dump.rs  list.rs  mod.rs  pause.rs  profile.rs  reload.rs  stop.rs  toggle_inhibit.rs  trigger.rs
src/services/: app_inhibit.rs  dbus.rs  media.rs  mod.rs  power.rs  ticker.rs  wayland.rs
