[package]
name = "stasis"
version = "1.0.0"
edition = "2024"
authors = ["Dustin Pilgrim <dustin.pilgrim1997@gmail.com>"]
description = "A modern Wayland idle manager that knows when to step back."
license = "MIT"
readme = "README.md"
repository = "https://github.com/saltnpepper97/stasis"
keywords = ["wayland", "idle", "manager", "rust", "linux"]
categories = ["command-line-utilities", "os::linux-apis"]
exclude = ["/.github", "/target", "/.idea", "/.vscode", "Cargo.lock"]

[profile.dev]
opt-level = 2

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
eventline = "0.7.2"
futures = "0.3.32"
libc = "0.2.182"
procfs = { version = "0.18.0", default-features = false }
regex = "1.12.3"
rune-cfg = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["client", "unstable", "staging"] }
zbus = { version = "5.12.2", features = ["tokio"] }
